--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  {% load static %}
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="{% static 'style.css' %}" />
     <title>Movie Seat Booking</title>
   </head>
   <body>
@@ -105,6 +106,10 @@
       >
     </p>
 
-    <script src="script.js"></script>
+    <div class='cta'>
+      <button class='purchase_btn'>Purchase Your Tickets</button>
+    </div>
+
+    <script src="{% static 'script.js' %}"></script>
   </body>
 </html>
