--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,13 @@
     <div class="movie-container">
       <label>Pick a movie:</label>
       <select id="movie">
-        <option value="10">Avengers: Endgame ($10)</option>
-        <option value="12">Joker ($12)</option>
+        {% for movie in movies %}
+          
+          <option id='{{movie.title}}' {% if forloop.counter == 1 %}selected{% endif %} value={{movie.price}}>{{movie.title}} (${{movie.price}})</option>
+        {% endfor %}
+        {% comment %} <option value="12">Joker ($12)</option>
         <option value="8">Toy Story 4 ($8)</option>
-        <option value="9">The Lion King ($9)</option>
+        <option value="9">The Lion King ($9)</option> {% endcomment %}
       </select>
     </div>
 
@@ -111,5 +114,6 @@
     </div>
 
     <script src="{% static 'script.js' %}"></script>
+    <script src="{% static 'backend.js' %}"></script>
   </body>
 </html>
