--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
       <select id="movie">
         {% for movie in movies %}
           
-          <option id='{{movie.title}}' {% if forloop.counter == 1 %}selected{% endif %} value={{movie.price}}>{{movie.title}} (${{movie.price}})</option>
+          <option id='{{movie.title}}'  value={{movie.price}}>{{movie.title}} (${{movie.price}})</option>
         {% endfor %}
         {% comment %} <option value="12">Joker ($12)</option>
         <option value="8">Toy Story 4 ($8)</option>
@@ -54,21 +54,11 @@
         <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
-        <div class="seat occupied"></div>
-        <div class="seat occupied"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat"></div>
-      </div>
-      <div class="row">
         <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
-        <div class="seat"></div>
-        <div class="seat occupied"></div>
-        <div class="seat occupied"></div>
       </div>
       <div class="row">
         <div class="seat"></div>
@@ -84,8 +74,8 @@
         <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
-        <div class="seat occupied"></div>
-        <div class="seat occupied"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
@@ -95,9 +85,19 @@
         <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
-        <div class="seat occupied"></div>
-        <div class="seat occupied"></div>
-        <div class="seat occupied"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+      </div>
+      <div class="row">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat "></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
         <div class="seat"></div>
       </div>
     </div>
@@ -112,7 +112,6 @@
     <div class='cta'>
       <button class='purchase_btn'>Purchase Your Tickets</button>
     </div>
-
     <script src="{% static 'script.js' %}"></script>
     <script src="{% static 'backend.js' %}"></script>
   </body>
