email template for mailing customer done

--- a/templates/email_template.html
+++ b/templates/email_template.html
@@ -1,7 +1,8 @@
-Hello {{foo}}
+Hello {{first_name}}
 
-I am
+Thank you for purchasing a movie ticket for {{movie_title | title}}. Your seat number is {{seat_no}}. 
 
-Testing this
+We hope to see you and enjoy the movie too.
 
-Out !!
+Thank you again
+Oliver Otchere (CEO)
